--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,25 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_home"
+            android:title="Inicio" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/ic_informacion"
+            android:title="Informacion" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/ic_notas"
+            android:title="Notas" />
+
+        <item
+            android:id="@+id/fragment_codigos"
+            android:icon="@drawable/ic_codigos"
+            android:title="codigos" />
+
+        <item
+            android:id="@+id/fragment_codigos"
+            android:icon="@drawable/ic_perfil"
+            android:title=" Perfil" />
     </group>
 </menu>
